reports/cppcheck.txt
Checking api-endpoints/api-endpoints-lib.h ...
1/4 files checked 7% done
Checking api-endpoints/api-endpoints.cc ...
2/4 files checked 80% done
Checking api-endpoints/api-matchmaking-lib.h ...
3/4 files checked 82% done
Checking api-endpoints/api-matchmaking.cc ...
4/4 files checked 100% done
Checking authentication/auth-service.cpp ...
1/2 files checked 48% done
Checking authentication/auth-service.h ...
2/2 files checked 100% done
Checking main/db-service.cpp ...
1/3 files checked 77% done
Checking main/db-service.h ...
2/3 files checked 92% done
Checking main/main.cpp ...
3/3 files checked 100% done
Checking testing/MockAPIEndPoints.h ...
1/15 files checked 0% done
Checking testing/MockAuthService.h ...
2/15 files checked 0% done
Checking testing/MockDBService.h ...
3/15 files checked 1% done
Checking testing/test-auth-routes-integration.cpp ...
4/15 files checked 5% done
Checking testing/test-auth-routes.cpp ...
5/15 files checked 10% done
Checking testing/test-auth.cpp ...
6/15 files checked 11% done
Checking testing/test-db-integration.cpp ...
7/15 files checked 17% done
Checking testing/test-gdp-integ.cpp ...
8/15 files checked 22% done
Checking testing/test-gdp.cpp ...
9/15 files checked 27% done
Checking testing/test-get-post-games-routes-integration.cc ...
10/15 files checked 35% done
Checking testing/test-get-post-games-routes.cc ...
11/15 files checked 42% done
Checking testing/test-matchmaking-integration.cpp ...
12/15 files checked 59% done
Checking testing/test-matchmaking.cpp ...
13/15 files checked 73% done
Checking testing/test-player-endpoints-integration.cpp ...
14/15 files checked 84% done
Checking testing/test-player-endpoints.cpp ...
testing/test-player-endpoints.cpp:295:1: error: syntax error [syntaxError]
TEST_F(PlayerTestFixture, GetGamePlayersAuthTest) {
^
15/15 files checked 100% done
